style: Adjust navigation bar padding, gaps, and element sizes for improved responsiveness across different screen sizes.

--- a/src/index.css
+++ b/src/index.css
@@ -37,18 +37,28 @@ body {
   }
 
   nav {
-    @apply flex justify-between items-center bg-white/50 backdrop-blur-3xl p-2 px-5 select-none;
+    @apply flex justify-between items-center bg-white/50 backdrop-blur-3xl p-1.5 px-2 sm:px-4 md:px-5 select-none;
 
     div {
-      @apply flex items-center max-sm:w-full max-sm:justify-center gap-5;
+      @apply flex items-center max-sm:w-full max-sm:justify-center gap-1.5 sm:gap-2 md:gap-4 lg:gap-5;
+
+      &:first-child {
+        img {
+          @apply w-4 h-4 sm:w-5 sm:h-5 md:w-6 md:h-6;
+        }
+
+        > p {
+          @apply font-bold text-[18px] sm:text-sm md:text-sm lg:text-base;
+        }
+      }
 
       &:last-child {
-        @apply max-sm:hidden;
+        @apply max-sm:hidden gap-2 md:gap-3 lg:gap-5;
       }
     }
 
     ul {
-      @apply flex items-center gap-5 max-sm:hidden;
+      @apply flex items-center gap-2 md:gap-3 lg:gap-5 max-sm:hidden;
 
       p {
         @apply text-sm cursor-pointer hover:underline transition-all;
